# remote_client

./: .gitignore  CMakeLists.txt  README.md  common.cpp  common.h  common.h.in  config.ini  debpackaging.cmake  installing.cmake  key_mapper.cpp  key_mapper.h  kuznechik.cpp  kuznechik.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rd_client.pro  xlib_utils.h
